add invitations to /backend/references

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -631,6 +631,14 @@
           ["createAllowlistIdentifier()", "/references/backend/allowlist/create-allowlist-identifier"],
           ["deleteAllowlistIdentifier()", "/references/backend/allowlist/delete-allowlist-identifier"]
         ]
+      ],
+      [
+        { "title": "Invitations" },
+        [
+          ["getInvitationList()", "/references/backend/invitations/get-invitation-list"],
+          ["createInvitation()", "/references/backend/invitations/create-invitation"],
+          ["revokeInvitation()", "/references/backend/invitations/revoke-invitation"]
+        ]
       ]
     ]
   ],
