add sessions to /backend/references

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -631,6 +631,16 @@
           ["createAllowlistIdentifier()", "/references/backend/allowlist/create-allowlist-identifier"],
           ["deleteAllowlistIdentifier()", "/references/backend/allowlist/delete-allowlist-identifier"]
         ]
+      ],
+      [
+        { "title": "Sessions" },
+        [
+          ["getSession()", "/references/backend/sessions/get-session"],
+          ["getSessionList()", "/references/backend/sessions/get-session-list"],
+          ["getToken()", "/references/backend/sessions/get-token"],
+          ["verifySession()", "/references/backend/sessions/verify-session"],
+          ["revokeSession()", "/references/backend/sessions/revoke-allowlist"]
+        ]
       ]
     ]
   ],
