feat: add invitations to /backend/references (#176)

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -639,6 +639,14 @@
           ["getClientList()", "/references/backend/client/get-client-list"],
           ["verifyClient()", "/references/backend/client/verify-client"]
         ]
+      ],
+      [
+        { "title": "Invitations" },
+        [
+          ["getInvitationList()", "/references/backend/invitations/get-invitation-list"],
+          ["createInvitation()", "/references/backend/invitations/create-invitation"],
+          ["revokeInvitation()", "/references/backend/invitations/revoke-invitation"]
+        ]
       ]
     ]
   ],
