--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -647,6 +647,18 @@
           ["createInvitation()", "/references/backend/invitations/create-invitation"],
           ["revokeInvitation()", "/references/backend/invitations/revoke-invitation"]
         ]
+      ],
+      [
+        { "title": "Emails" },
+        [
+          ["createEmail()", "/references/backend/emails/create-email"]
+        ]
+      ],
+      [
+        { "title": "SMS Message" },
+        [
+          ["createSMSMessage()", "/references/backend/sms-message/create-sms-message"]
+        ]
       ]
     ]
   ],
