--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -632,6 +632,16 @@
           ["deleteAllowlistIdentifier()", "/references/backend/allowlist/delete-allowlist-identifier"]
         ]
       ],
+      [
+        { "title": "Sessions" },
+        [
+          ["getSession()", "/references/backend/sessions/get-session"],
+          ["getSessionList()", "/references/backend/sessions/get-session-list"],
+          ["getToken()", "/references/backend/sessions/get-token"],
+          ["verifySession()", "/references/backend/sessions/verify-session"],
+          ["revokeSession()", "/references/backend/sessions/revoke-session"]
+        ]
+      ],
       [ 
         { "title": "Client" },
         [
