docs: map remaining pages, remove some empty pages

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -95,7 +95,9 @@
       ["<UserButton />", "/users/user-button"],
       ["<UserProfile />", "/users/user-profile"],
       "# Guides",
-      ["Sync data to your backend", "/users/sync-data"]
+      ["Sync data to your backend", "/users/sync-data"],
+      ["Web3 authentication", "/users/web3-wallets"],
+      ["Build custom UIs", "/users/build-your-own-ui"]
     ]
   ],
   [
@@ -550,7 +552,6 @@
       "root": "references/remix"
     },
     [
-      ["Overview", "references/remix/overview"],
       ["<ClerkApp/>", "references/remix/clerk-app"],
       ["ClerkCatchBoundary()", "references/remix/clerk-catch-boundary"]
     ]
