docs: map remaining pages, remove some empty pages (#180)

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -95,7 +95,9 @@
       ["<UserButton />", "/users/user-button"],
       ["<UserProfile />", "/users/user-profile"],
       "# Guides",
-      ["Sync data to your backend", "/users/sync-data"]
+      ["Sync data to your backend", "/users/sync-data"],
+      ["Web3 authentication", "/users/web3-wallets"],
+      ["Build custom UIs", "/users/build-your-own-ui"]
     ]
   ],
   [
@@ -258,7 +260,6 @@
       ["Hasura", "/integrations/databases/hasura"],
       ["Nhost", "/integrations/databases/nhost"],
       ["Supabase", "/integrations/databases/supabase"],
-      ["Wundergraph", "/integrations/databases/wundergraph"],
       "# Analytics",
       ["Google Analytics", "/integrations/analytics/google-analytics"]
     ]
@@ -550,7 +551,6 @@
       "root": "references/remix"
     },
     [
-      ["Overview", "references/remix/overview"],
       ["<ClerkApp/>", "references/remix/clerk-app"],
       ["ClerkCatchBoundary()", "references/remix/clerk-catch-boundary"]
     ]
