--- a/.github/workflows/revalidate.yml
+++ b/.github/workflows/revalidate.yml
@@ -37,4 +37,4 @@ jobs:
           curl -X POST ${{ env.CLERK_COM_BASE_URL }}/api/revalidate-docs \
             -H "Content-Type: application/json" \
             -H "Authorization: Bearer ${{ secrets.REVALIDATE_DOCS_SECRET }}" \
-            -d "{\"paths\": ${{ steps.paths-to-revalidate.outputs.paths }}}""
+            -d "{\"paths\": ${{ steps.paths-to-revalidate.outputs.paths }}}"
