feat: add backend section to /references; add overview, user object, and organization object content to backend section (#172)
Co-authored-by: Bryce Kalow <bryce@clerk.dev>

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -591,5 +591,86 @@
     ]
   ],
   "# API References",
+  [ { "title": "Backend SDK", "icon": "", "root": "/references/backend"},
+    [
+      ["Overview", "/references/backend/overview"],
+      [
+        { "title": "User" }, 
+        [
+          ["getUserList()", "/references/backend/user/get-user-list"],
+          ["getUser()", "/references/backend/user/get-user"],
+          ["getCount()", "/references/backend/user/get-count"],
+          ["createUser()", "/references/backend/user/create-user"],
+          ["updateUser()", "/references/backend/user/update-user"],
+          ["deleteUser()", "/references/backend/user/delete-user"]
+        ]
+      ],
+      [
+        { "title": "Organization" },
+        [
+          ["getOrganization()", "/references/backend/organization/get-organization"],
+          ["getOrganizationList()", "/references/backend/organization/get-organization-list"],
+          ["getOrganizationMembershipList()", "/references/backend/organization/get-organization-membership-list"],
+          ["getPendingOrganizationInvitationList()", "/references/backend/organization/get-pending-organization-invitation-list"],
+          ["createOrganization()", "/references/backend/organization/create-organization"],
+          ["createOrganizationMembership()", "/references/backend/organization/create-organization-membership"],
+          ["createOrganizationInvitation()", "/references/backend/organization/create-organization-membership"],
+          ["updateOrganization()", "/references/backend/organization/update-organization"],
+          ["updateOrganizationMembership()", "/references/backend/organization/update-organization-membership"],
+          ["updateOrganizationMetadata()", "/references/backend/organization/update-organization-metadata"],
+          ["updateOrganizationMembershipMetadata()", "/references/backend/organization/update-organization-membership-metadata"],
+          ["deleteOrganization()", "/references/backend/organization/delete-organization"],
+          ["deleteOrganizationMembership()", "/references/backend/organization/delete-organization-membership"],
+          ["revokeOrganizationInvitation()", "/references/backend/organization/revoke-organization-invitation"]
+        ]
+      ],
+      [
+        { "title": "Allowlist Identifiers" },
+        [
+          ["getAllowlistIdentifierList()", "/references/backend/allowlist/get-allowlist-identifier-list"],
+          ["createAllowlistIdentifier()", "/references/backend/allowlist/create-allowlist-identifier"],
+          ["deleteAllowlistIdentifier()", "/references/backend/allowlist/delete-allowlist-identifier"]
+        ]
+      ],
+      [
+        { "title": "Sessions" },
+        [
+          ["getSession()", "/references/backend/sessions/get-session"],
+          ["getSessionList()", "/references/backend/sessions/get-session-list"],
+          ["getToken()", "/references/backend/sessions/get-token"],
+          ["verifySession()", "/references/backend/sessions/verify-session"],
+          ["revokeSession()", "/references/backend/sessions/revoke-session"]
+        ]
+      ],
+      [ 
+        { "title": "Client" },
+        [
+          ["getClient()", "/references/backend/client/get-client"],
+          ["getClientList()", "/references/backend/client/get-client-list"],
+          ["verifyClient()", "/references/backend/client/verify-client"]
+        ]
+      ],
+      [
+        { "title": "Invitations" },
+        [
+          ["getInvitationList()", "/references/backend/invitations/get-invitation-list"],
+          ["createInvitation()", "/references/backend/invitations/create-invitation"],
+          ["revokeInvitation()", "/references/backend/invitations/revoke-invitation"]
+        ]
+      ],
+      [
+        { "title": "Emails" },
+        [
+          ["createEmail()", "/references/backend/emails/create-email"]
+        ]
+      ],
+      [
+        { "title": "SMS Message" },
+        [
+          ["createSMSMessage()", "/references/backend/sms-message/create-sms-message"]
+        ]
+      ]
+    ]
+  ],
   ["Backend API", "https://clerk.com/docs/reference/backend-api"]
 ]
