feat: add security to nav

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,6 +1,5 @@
 [
   ["Home", "/"],
-  ["Why Clerk?", "/why-clerk"],
   "# Learning",
   [
     {
@@ -238,7 +237,7 @@
       ["Sign Out", "/custom-flows/sign-out"],
       ["User Impersonation", "/custom-flows/user-impersonation"],
       ["Invitations", "/custom-flows/invitations"],
-      ["Embeedded Magic Links", "/custom-flows/embedded-magic-links"],
+      ["Embedded Magic Links", "/custom-flows/embedded-magic-links"],
       [
         "Multi-session applications",
         "/custom-flows/multi-session-applications"
@@ -343,6 +342,21 @@
         "/upgrade-guides/v3-express-server-side-changes"
       ]
     ]
+  ],
+  [
+    {
+      "title": "Security",
+      "icon": "lock-closed",
+      "root": "security"
+    },
+    [
+      ["Overview", "/security/overview"],
+      ["Vulnerability disclosure policy", "/security/vulnerability-disclosure-policy"],
+      ["XSS leak protection", "/security/xss-leak-protection"],
+      ["CSRF protection", "/security/csrf-protection"],
+      ["Fixation protection", "/security/fixation-protection"],
+      ["Password protection and rules", "/security/password-protection"]
+      ]
   ],
   "# SDK References",
   [
