final editorial pass

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -24,7 +24,11 @@
       ["Fastify", "/quickstarts/fastify"],
       "# Example Apps",
       ["Next.js starter repo", "https://github.com/clerkinc/clerk-next-app"],
-      ["Remix starter repo", "https://github.com/clerkinc/remix-auth-starter"]
+      ["React starter repo", "https://github.com/clerkinc/clerk-react-starter"],
+      ["Remix starter repo", "https://github.com/clerkinc/remix-auth-starter"],
+      ["Redwood starter repo", "https://github.com/clerkinc/clerk-redwood-starter"],
+      ["Expo starter repo", "https://github.com/clerkinc/clerk-expo-starter"],
+      ["Fastify starter repo", "https://github.com/clerkinc/clerk-fastify-starter/"]
     ]
   ],
   "---",
