update manifest to update nav

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -23,11 +23,7 @@
       ["Fastify", "/quickstarts/fastify"],
       "# Example Apps",
       ["Next.js starter repo", "https://github.com/clerkinc/clerk-next-app"],
-      ["React starter repo", "https://github.com/clerkinc/clerk-react-starter"],
-      ["Remix starter repo", "https://github.com/clerkinc/remix-auth-starter"],
-      ["Redwood starter repo", "https://github.com/clerkinc/clerk-redwood-starter"],
-      ["Expo starter repo", "https://github.com/clerkinc/clerk-expo-starter"],
-      ["Fastify starter repo", "https://github.com/clerkinc/clerk-fastify-starter/"]
+      ["Remix starter repo", "https://github.com/clerkinc/remix-auth-starter"]
     ]
   ],
   "---",
@@ -386,18 +382,16 @@
     { "title": "React", "icon": "react", "root": "references/react" },
     [
       ["Overview", "/references/react/overview"],
-      [
-        "Client-side Helpers",
-        ["useUser()", "/references/react/use-user"],
-        ["useClerk()", "/references/react/use-clerk"],
-        ["useAuth()", "/references/react/use-auth"],
-        ["useSignIn()", "/references/react/use-sign-in"],
-        ["useSignUp()", "/references/react/use-sign-up"],
-        ["useSession()", "/references/react/use-session"],
-        ["useSessionList()", "/references/react/use-session-list"],
-        ["useOrganization()", "/references/react/use-organization"],
-        ["useOrganizationList()", "/references/react/use-organization-list"]
-      ]
+      "# Client-side Helpers",
+      ["useUser()", "/references/react/use-user"],
+      ["useClerk()", "/references/react/use-clerk"],
+      ["useAuth()", "/references/react/use-auth"],
+      ["useSignIn()", "/references/react/use-sign-in"],
+      ["useSignUp()", "/references/react/use-sign-up"],
+      ["useSession()", "/references/react/use-session"],
+      ["useSessionList()", "/references/react/use-session-list"],
+      ["useOrganization()", "/references/react/use-organization"],
+      ["useOrganizationList()", "/references/react/use-organization-list"]
     ]
   ],
   [
