feat: add clarification on "client-side helpers" (#188)

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -386,6 +386,7 @@
     { "title": "React", "icon": "react", "root": "references/react" },
     [
       ["Overview", "/references/react/overview"],
+      "# Client-side Helpers",
       ["useUser()", "/references/react/use-user"],
       ["useClerk()", "/references/react/use-clerk"],
       ["useAuth()", "/references/react/use-auth"],
