Prepare for launch

--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -47,7 +47,7 @@ jobs:
           repository: clerkinc/clerk-marketing
           token: ${{ secrets.CLERK_GH_TOKEN }}
           path: app
-          ref: brk.feat/render-mdx-prod
+          ref: production
 
       - run: npm install --global vercel@latest
 
