--- a/.github/workflows/revalidate.yml
+++ b/.github/workflows/revalidate.yml
@@ -1,7 +1,7 @@
 name: Revalidate Production Pages
 
 env:
-  CLERK_COM_BASE_URL: https://new-docs.clerkpreview.com
+  CLERK_COM_BASE_URL: https://clerk.com
 
 on:
   push:
