remove it from the manifest

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -25,9 +25,15 @@
       ["Next.js starter repo", "https://github.com/clerkinc/clerk-next-app"],
       ["React starter repo", "https://github.com/clerkinc/clerk-react-starter"],
       ["Remix starter repo", "https://github.com/clerkinc/remix-auth-starter"],
-      ["Redwood starter repo", "https://github.com/clerkinc/clerk-redwood-starter"],
+      [
+        "Redwood starter repo",
+        "https://github.com/clerkinc/clerk-redwood-starter"
+      ],
       ["Expo starter repo", "https://github.com/clerkinc/clerk-expo-starter"],
-      ["Fastify starter repo", "https://github.com/clerkinc/clerk-fastify-starter/"]
+      [
+        "Fastify starter repo",
+        "https://github.com/clerkinc/clerk-fastify-starter/"
+      ]
     ]
   ],
   "---",
@@ -149,14 +155,6 @@
     ]
   ],
   "---",
-  [
-    {
-      "title": "Account Portal",
-      "icon": "template",
-      "root": "account-portal"
-    },
-    [["Overview", "/account-portal/overview"]]
-  ],
   [
     {
       "title": "Component Reference",
@@ -354,12 +352,15 @@
     },
     [
       ["Overview", "/security/overview"],
-      ["Vulnerability disclosure policy", "/security/vulnerability-disclosure-policy"],
+      [
+        "Vulnerability disclosure policy",
+        "/security/vulnerability-disclosure-policy"
+      ],
       ["XSS leak protection", "/security/xss-leak-protection"],
       ["CSRF protection", "/security/csrf-protection"],
       ["Fixation protection", "/security/fixation-protection"],
       ["Password protection and rules", "/security/password-protection"]
-      ]
+    ]
   ],
   "# SDK References",
   [
@@ -591,9 +592,7 @@
       "icon": "gatsby",
       "root": "references/gatsby"
     },
-    [
-      ["withServerAuth()", "references/gatsby/with-server-auth"]
-    ]
+    [["withServerAuth()", "references/gatsby/with-server-auth"]]
   ],
   [
     {
@@ -608,11 +607,12 @@
     ]
   ],
   "# API References",
-  [ { "title": "Backend SDK", "icon": "", "root": "/references/backend"},
+  [
+    { "title": "Backend SDK", "icon": "", "root": "/references/backend" },
     [
       ["Overview", "/references/backend/overview"],
       [
-        { "title": "User" }, 
+        { "title": "User" },
         [
           ["getUserList()", "/references/backend/user/get-user-list"],
           ["getUser()", "/references/backend/user/get-user"],
@@ -625,28 +625,79 @@
       [
         { "title": "Organization" },
         [
-          ["getOrganization()", "/references/backend/organization/get-organization"],
-          ["getOrganizationList()", "/references/backend/organization/get-organization-list"],
-          ["getOrganizationMembershipList()", "/references/backend/organization/get-organization-membership-list"],
-          ["getPendingOrganizationInvitationList()", "/references/backend/organization/get-pending-organization-invitation-list"],
-          ["createOrganization()", "/references/backend/organization/create-organization"],
-          ["createOrganizationMembership()", "/references/backend/organization/create-organization-membership"],
-          ["createOrganizationInvitation()", "/references/backend/organization/create-organization-membership"],
-          ["updateOrganization()", "/references/backend/organization/update-organization"],
-          ["updateOrganizationMembership()", "/references/backend/organization/update-organization-membership"],
-          ["updateOrganizationMetadata()", "/references/backend/organization/update-organization-metadata"],
-          ["updateOrganizationMembershipMetadata()", "/references/backend/organization/update-organization-membership-metadata"],
-          ["deleteOrganization()", "/references/backend/organization/delete-organization"],
-          ["deleteOrganizationMembership()", "/references/backend/organization/delete-organization-membership"],
-          ["revokeOrganizationInvitation()", "/references/backend/organization/revoke-organization-invitation"]
+          [
+            "getOrganization()",
+            "/references/backend/organization/get-organization"
+          ],
+          [
+            "getOrganizationList()",
+            "/references/backend/organization/get-organization-list"
+          ],
+          [
+            "getOrganizationMembershipList()",
+            "/references/backend/organization/get-organization-membership-list"
+          ],
+          [
+            "getPendingOrganizationInvitationList()",
+            "/references/backend/organization/get-pending-organization-invitation-list"
+          ],
+          [
+            "createOrganization()",
+            "/references/backend/organization/create-organization"
+          ],
+          [
+            "createOrganizationMembership()",
+            "/references/backend/organization/create-organization-membership"
+          ],
+          [
+            "createOrganizationInvitation()",
+            "/references/backend/organization/create-organization-membership"
+          ],
+          [
+            "updateOrganization()",
+            "/references/backend/organization/update-organization"
+          ],
+          [
+            "updateOrganizationMembership()",
+            "/references/backend/organization/update-organization-membership"
+          ],
+          [
+            "updateOrganizationMetadata()",
+            "/references/backend/organization/update-organization-metadata"
+          ],
+          [
+            "updateOrganizationMembershipMetadata()",
+            "/references/backend/organization/update-organization-membership-metadata"
+          ],
+          [
+            "deleteOrganization()",
+            "/references/backend/organization/delete-organization"
+          ],
+          [
+            "deleteOrganizationMembership()",
+            "/references/backend/organization/delete-organization-membership"
+          ],
+          [
+            "revokeOrganizationInvitation()",
+            "/references/backend/organization/revoke-organization-invitation"
+          ]
         ]
       ],
       [
         { "title": "Allowlist Identifiers" },
         [
-          ["getAllowlistIdentifierList()", "/references/backend/allowlist/get-allowlist-identifier-list"],
-          ["createAllowlistIdentifier()", "/references/backend/allowlist/create-allowlist-identifier"],
-          ["deleteAllowlistIdentifier()", "/references/backend/allowlist/delete-allowlist-identifier"]
+          [
+            "getAllowlistIdentifierList()",
+            "/references/backend/allowlist/get-allowlist-identifier-list"
+          ],
+          [
+            "createAllowlistIdentifier()",
+            "/references/backend/allowlist/create-allowlist-identifier"
+          ],
+          [
+            "deleteAllowlistIdentifier()",
+            "/references/backend/allowlist/delete-allowlist-identifier"
+          ]
         ]
       ],
       [
@@ -659,7 +710,7 @@
           ["revokeSession()", "/references/backend/sessions/revoke-session"]
         ]
       ],
-      [ 
+      [
         { "title": "Client" },
         [
           ["getClient()", "/references/backend/client/get-client"],
@@ -670,21 +721,31 @@
       [
         { "title": "Invitations" },
         [
-          ["getInvitationList()", "/references/backend/invitations/get-invitation-list"],
-          ["createInvitation()", "/references/backend/invitations/create-invitation"],
-          ["revokeInvitation()", "/references/backend/invitations/revoke-invitation"]
+          [
+            "getInvitationList()",
+            "/references/backend/invitations/get-invitation-list"
+          ],
+          [
+            "createInvitation()",
+            "/references/backend/invitations/create-invitation"
+          ],
+          [
+            "revokeInvitation()",
+            "/references/backend/invitations/revoke-invitation"
+          ]
         ]
       ],
       [
         { "title": "Emails" },
-        [
-          ["createEmail()", "/references/backend/emails/create-email"]
-        ]
+        [["createEmail()", "/references/backend/emails/create-email"]]
       ],
       [
         { "title": "SMS Message" },
         [
-          ["createSMSMessage()", "/references/backend/sms-message/create-sms-message"]
+          [
+            "createSMSMessage()",
+            "/references/backend/sms-message/create-sms-message"
+          ]
         ]
       ]
     ]
