chore: remove AP references (#193)

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -157,14 +157,6 @@
   "---",
   [
     {
-      "title": "Account Portal",
-      "icon": "template",
-      "root": "account-portal"
-    },
-    [["Overview", "/account-portal/overview"]]
-  ],
-  [
-    {
       "title": "Component Reference",
       "icon": "rectangle-group",
       "root": "components"
@@ -600,9 +592,7 @@
       "icon": "gatsby",
       "root": "references/gatsby"
     },
-    [
-      ["withServerAuth()", "references/gatsby/with-server-auth"]
-    ]
+    [["withServerAuth()", "references/gatsby/with-server-auth"]]
   ],
   [
     {
