--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -47,7 +47,7 @@ jobs:
           repository: clerkinc/clerk-marketing
           token: ${{ secrets.CLERK_GH_TOKEN }}
           path: app
-          ref: production
+          ref: brk.mdx-docs-revert-revert
 
       - run: npm install --global vercel@latest
 
