Revert "fix: point previews at assembly branch for now (#198)"
This reverts commit 052a65c4e9c5282535dda6f7bc1459a447cfcd35.

--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -47,7 +47,7 @@ jobs:
           repository: clerkinc/clerk-marketing
           token: ${{ secrets.CLERK_GH_TOKEN }}
           path: app
-          ref: brk.mdx-docs-revert-revert
+          ref: production
 
       - run: npm install --global vercel@latest
 
