fix misspelled title in sidenav

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -554,7 +554,7 @@
     },
     [
       ["Overview", "references/nodejs/overview"],
-      ["Availabe Methods", "references/nodejs/methods"],
+      ["Available Methods", "references/nodejs/methods"],
       ["Connect/Express Middleware", "references/nodejs/express-middleware"],
       [
         "Networkless Token Verification",
