--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -159,34 +159,7 @@
       "icon": "rectangle-group",
       "root": "account-portal"
     },
-    [
-      ["Overview", "/account-portal/overview"],
- 
-      "# Control Components",
-      [
-        "<AuthenticateWithRedirectCallback/>",
-        "/components/control/authenticate-with-callback"
-      ],
-      ["<ClerkLoaded/>", "/components/control/clerk-loaded"],
-      ["<ClerkLoading/>", "/components/control/clerk-loading"],
-      ["<MultisessionAppSupport/>", "/components/control/multi-session"],
-      ["<RedirectToSignIn/>", "/components/control/redirect-to-signin"],
-      ["<RedirectToSignUp/>", "/components/control/redirect-to-signup"],
-      [
-        "<RedirectToUserProfile/>",
-        "/components/control/redirect-to-userprofile"
-      ],
-      ["<SignedIn/>", "/components/control/signed-in"],
-      ["<SignedOut/>", "/components/control/signed-out"],
-      "# Unstyled Components",
-      ["<SignInButton/>", "/components/unstyled/sign-in-button"],
-      [
-        "<SignInWithMetamaskButton/>",
-        "/components/unstyled/sign-in-with-metamask"
-      ],
-      ["<SignUpButton/>", "/components/unstyled/sign-up-button"],
-      ["<SignOutButton/>", "/components/unstyled/sign-out-button"]
-    ]
+    [["Overview", "/account-portal/overview"]]
   ],
   [
     {
