remove page; redirects to new content

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -105,8 +105,7 @@
       ["<UserProfile />", "/users/user-profile"],
       "# Guides",
       ["Sync data to your backend", "/users/sync-data"],
-      ["Web3 authentication", "/users/web3-wallets"],
-      ["Build custom UIs", "/users/build-your-own-ui"]
+      ["Web3 authentication", "/users/web3-wallets"]
     ]
   ],
   [
