--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -159,7 +159,34 @@
       "icon": "rectangle-group",
       "root": "account-portal"
     },
-    [["Overview", "/account-portal/overview"]]
+    [
+      ["Overview", "/account-portal/overview"],
+      ["Getting Started", "/account-portal/getting-started"],
+
+      "# Advanced Usage",
+      ["Custom Redirects", "/account-portal/custom-redirects"],
+      ["User & Organization Profile Pages","/account-portal/user-profile-org-profile"],
+      ["Disable Account Portal","/account-portal/disable-account-portal"],
+
+      "# Component Reference",
+
+      ["<ClerkProvider/>", "/components/clerk-provider"],
+      ["<RedirectToSignIn/>", "/components/control/redirect-to-signin"],
+      ["<RedirectToSignUp/>", "/components/control/redirect-to-signup"],
+      [
+        "<RedirectToUserProfile/>",
+        "/components/control/redirect-to-userprofile"
+      ],
+      [
+        "<RedirectToOrganizationProfile/>",
+        "/components/control/redirect-to-organizationprofile"
+      ],
+      ["<SignedIn/>", "/components/control/signed-in"],
+      ["<SignedOut/>", "/components/control/signed-out"],
+
+      ["<SignInButton/>", "/components/unstyled/sign-in-button"],
+      ["<SignUpButton/>", "/components/unstyled/sign-up-button"]
+    ]
   ],
   [
     {
@@ -213,6 +240,14 @@
       [
         "<RedirectToUserProfile/>",
         "/components/control/redirect-to-userprofile"
+      ],
+      [
+        "<RedirectToOrganizationProfile/>",
+        "/components/control/redirect-to-organizationprofile"
+      ],
+      [
+        "<RedirectToCreateOrganization/>",
+        "/components/control/redirect-to-createorganization"
       ],
       ["<SignedIn/>", "/components/control/signed-in"],
       ["<SignedOut/>", "/components/control/signed-out"],
