--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -161,31 +161,12 @@
     },
     [
       ["Overview", "/account-portal/overview"],
-      ["Getting Started", "/account-portal/getting-started"],
+      ["Getting started", "/account-portal/getting-started"],
 
       "# Advanced Usage",
-      ["Custom Redirects", "/account-portal/custom-redirects"],
+      ["Custom redirects", "/account-portal/custom-redirects"],
       ["User & Organization Profile Pages","/account-portal/user-profile-org-profile"],
-      ["Disable Account Portal","/account-portal/disable-account-portal"],
-
-      "# Component Reference",
-
-      ["<ClerkProvider/>", "/components/clerk-provider"],
-      ["<RedirectToSignIn/>", "/components/control/redirect-to-signin"],
-      ["<RedirectToSignUp/>", "/components/control/redirect-to-signup"],
-      [
-        "<RedirectToUserProfile/>",
-        "/components/control/redirect-to-userprofile"
-      ],
-      [
-        "<RedirectToOrganizationProfile/>",
-        "/components/control/redirect-to-organizationprofile"
-      ],
-      ["<SignedIn/>", "/components/control/signed-in"],
-      ["<SignedOut/>", "/components/control/signed-out"],
-
-      ["<SignInButton/>", "/components/unstyled/sign-in-button"],
-      ["<SignUpButton/>", "/components/unstyled/sign-up-button"]
+      ["Disable Account Portal","/account-portal/disable-account-portal"]
     ]
   ],
   [
