PR changes and change to Satellite domains
- Minor copy edits, and some other pr changes from Alexis
- Reframing the doc as "Adding Satellite Domains"

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -300,7 +300,7 @@
       ["Customize your Session Token", "/advanced-usage/custom-session-token"],
       ["Manual JWT Verification", "/advanced-usage/manual-jwt"],
       ["Clerk as an OAuth2 Provider", "/advanced-usage/clerk-idp"],
-      ["Multi Domain Setup", "/advanced-usage/multi-domain"]
+      ["Adding Satellite Domains", "/advanced-usage/satellite-domains"]
     ]
   ],
   [
