--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -156,7 +156,7 @@
   [
     {
       "title": "Account Portal",
-      "icon": "rectangle-group",
+      "icon": "cloud",
       "root": "account-portal"
     },
     [
