--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -165,7 +165,7 @@
 
       "# Advanced Usage",
       ["Custom redirects", "/account-portal/custom-redirects"],
-      ["User & Organization Pages","/account-portal/user-profile-org-profile"],
+      ["User & Organization pages","/account-portal/user-profile-org-profile"],
       ["Disable Account Portal","/account-portal/disable-account-portal"]
     ]
   ],
