--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -165,6 +165,7 @@
 
       "# Advanced Usage",
       ["Custom redirects", "/account-portal/custom-redirects"],
+      ["Direct links", "/account-portal/direct-links"],
       ["User & Organization pages","/account-portal/user-profile-org-profile"],
       ["Disable Account Portal","/account-portal/disable-account-portal"]
     ]
