--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -166,7 +166,7 @@
       "# Advanced Usage",
       ["Custom redirects", "/account-portal/custom-redirects"],
       ["Direct links", "/account-portal/direct-links"],
-      ["User & Organization pages","/account-portal/user-profile-org-profile"],
+      ["User & Organization Pages","/account-portal/user-profile-org-profile"],
       ["Disable Account Portal","/account-portal/disable-account-portal"]
     ]
   ],
