consolidating many tings

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -51,10 +51,6 @@
       ["Session options", "/authentication/configuration/session-options"],
       ["Email & SMS options", "/authentication/configuration/email-options"],
       ["Allowlist / Blocklist", "/authentication/configuration/allowlist"],
-      "# Prebuilt Components",
-      ["Overview", "/authentication/components/overview"],
-      ["<SignUp/>", "/authentication/components/sign-up"],
-      ["<SignIn/>", "/authentication/components/sign-in"],
       "# Social Connections",
       ["Overview", "/authentication/social-connections/overview"],
       [
@@ -100,9 +96,6 @@
       ["Overview", "/users/overview"],
       ["Metadata", "/users/metadata"],
       ["Deleting users", "/users/deleting-users"],
-      "# Prebuilt Components",
-      ["<UserButton />", "/users/user-button"],
-      ["<UserProfile />", "/users/user-profile"],
       "# Guides",
       ["Sync data to your backend", "/users/sync-data"],
       ["Web3 authentication", "/users/web3-wallets"]
@@ -112,10 +105,6 @@
     { "title": "Organizations", "icon": "user-group", "root": "organizations" },
     [
       ["Overview", "/organizations/overview"],
-      "# Components",
-      ["<CreateOrganization/>", "/organizations/create-component"],
-      ["<OrganizationProfile/>", "/organizations/profile-component"],
-      ["<OrganizationSwitcher/>", "/organizations/switcher-component"],
 
       "# Building custom flows",
       ["Using metadata", "/organizations/metadata"],
@@ -537,10 +526,12 @@
       [
         { "title": "Types" },
         [
-          ["Public User Data", "/references/javascript/types/public-user-data"],
-          ["Redirect Options", "/references/javascript/types/redirect-options"],
-          ["Magic Link Error", "/references/javascript/types/magic-link-error"],
-          ["Deleted Object", "/references/javascript/types/deleted-object"]
+          ["PublicUserData", "/references/javascript/types/public-user-data"],
+          ["RedirectOptions", "/references/javascript/types/redirect-options"],
+          ["MagicLinkError", "/references/javascript/types/magic-link-error"],
+          ["DeletedObject", "/references/javascript/types/deleted-object"],
+          ["OAuthProvider", "/references/javascript/types/oauth-provider"],
+          ["OAuthStrategy", "/references/javascript/types/oauth-strategy"]
         ]
       ]
     ]
