feat: Update sign up restrictions page (WIP)

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -51,6 +51,7 @@
       ["Session options", "/authentication/configuration/session-options"],
       ["Email & SMS options", "/authentication/configuration/email-options"],
       ["Allowlist / Blocklist", "/authentication/configuration/allowlist"],
+      ["Restrictions", "/authentication/configuration/restrictions"],
       "# Prebuilt Components",
       ["Overview", "/authentication/components/overview"],
       ["<SignUp/>", "/authentication/components/sign-up"],
