--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -50,7 +50,7 @@
       ["Sign-in options", "/authentication/configuration/sign-in-options"],
       ["Session options", "/authentication/configuration/session-options"],
       ["Email & SMS options", "/authentication/configuration/email-options"],
-      ["Allowlist / Blocklist", "/authentication/configuration/allowlist"],
+      ["Restrictions", "/authentication/configuration/restrictions"],
       "# Prebuilt Components",
       ["<SignIn/>", "/components/authentication/sign-in"],
       ["<SignUp/>", "/components/authentication/sign-up"],
