--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -51,6 +51,9 @@
       ["Session options", "/authentication/configuration/session-options"],
       ["Email & SMS options", "/authentication/configuration/email-options"],
       ["Allowlist / Blocklist", "/authentication/configuration/allowlist"],
+      "# Prebuilt Components",
+      ["<SignUp/>", "/components/authentication/sign-up"],
+      ["<SignIn/>", "/components/authentication/sign-in"],
       "# Social Connections",
       ["Overview", "/authentication/social-connections/overview"],
       [
@@ -96,6 +99,9 @@
       ["Overview", "/users/overview"],
       ["Metadata", "/users/metadata"],
       ["Deleting users", "/users/deleting-users"],
+      "# Prebuilt Components",
+      ["<UserButton />", "/components/user/user-button"],
+      ["<UserProfile />", "/components/user/user-profile"],
       "# Guides",
       ["Sync data to your backend", "/users/sync-data"],
       ["Web3 authentication", "/users/web3-wallets"]
@@ -105,7 +111,10 @@
     { "title": "Organizations", "icon": "user-group", "root": "organizations" },
     [
       ["Overview", "/organizations/overview"],
-
+      "# Prebuilt Components",
+      ["<CreateOrganization/>", "/components/organization/create-organization"],
+      ["<OrganizationProfile/>", "/components/organization/organization-profile"],
+      ["<OrganizationSwitcher/>", "/components/organization/organization-switcher"],
       "# Building custom flows",
       ["Using metadata", "/organizations/metadata"],
       ["Creating orgs", "/organizations/creating-organizations"],
