--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -52,9 +52,8 @@
       ["Email & SMS options", "/authentication/configuration/email-options"],
       ["Allowlist / Blocklist", "/authentication/configuration/allowlist"],
       "# Prebuilt Components",
-      ["Overview", "/authentication/components/overview"],
-      ["<SignUp/>", "/authentication/components/sign-up"],
-      ["<SignIn/>", "/authentication/components/sign-in"],
+      ["<SignIn/>", "/components/authentication/sign-in"],
+      ["<SignUp/>", "/components/authentication/sign-up"],
       "# Social Connections",
       ["Overview", "/authentication/social-connections/overview"],
       [
@@ -101,8 +100,8 @@
       ["Metadata", "/users/metadata"],
       ["Deleting users", "/users/deleting-users"],
       "# Prebuilt Components",
-      ["<UserButton />", "/users/user-button"],
-      ["<UserProfile />", "/users/user-profile"],
+      ["<UserButton />", "/components/user/user-button"],
+      ["<UserProfile />", "/components/user/user-profile"],
       "# Guides",
       ["Sync data to your backend", "/users/sync-data"],
       ["Web3 authentication", "/users/web3-wallets"]
@@ -112,11 +111,10 @@
     { "title": "Organizations", "icon": "user-group", "root": "organizations" },
     [
       ["Overview", "/organizations/overview"],
-      "# Components",
-      ["<CreateOrganization/>", "/organizations/create-component"],
-      ["<OrganizationProfile/>", "/organizations/profile-component"],
-      ["<OrganizationSwitcher/>", "/organizations/switcher-component"],
-
+      "# Prebuilt Components",
+      ["<CreateOrganization/>", "/components/organization/create-organization"],
+      ["<OrganizationProfile/>", "/components/organization/organization-profile"],
+      ["<OrganizationSwitcher/>", "/components/organization/organization-switcher"],
       "# Building custom flows",
       ["Using metadata", "/organizations/metadata"],
       ["Creating orgs", "/organizations/creating-organizations"],
@@ -537,10 +535,12 @@
       [
         { "title": "Types" },
         [
-          ["Public User Data", "/references/javascript/types/public-user-data"],
-          ["Redirect Options", "/references/javascript/types/redirect-options"],
-          ["Magic Link Error", "/references/javascript/types/magic-link-error"],
-          ["Deleted Object", "/references/javascript/types/deleted-object"]
+          ["PublicUserData", "/references/javascript/types/public-user-data"],
+          ["RedirectOptions", "/references/javascript/types/redirect-options"],
+          ["MagicLinkError", "/references/javascript/types/magic-link-error"],
+          ["DeletedObject", "/references/javascript/types/deleted-object"],
+          ["OAuthProvider", "/references/javascript/types/oauth-provider"],
+          ["OAuthStrategy", "/references/javascript/types/oauth-strategy"]
         ]
       ]
     ]
