--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -605,6 +605,16 @@
       ["Rack/Rails integration", "references/ruby/rack-rails"]
     ]
   ],
+  [
+    {
+      "title": "Community",
+      "icon": "ruby",
+      "root": "references/community"
+    },
+    [
+      ["Community SDK's", "references/community"]
+    ]
+  ],
   "# API References",
   [
     { "title": "Backend SDK", "icon": "", "root": "/references/backend" },
