fix: Brand names casing

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -73,7 +73,7 @@
           ["Coinbase", "/authentication/social-connections/coinbase"],
           ["Discord", "/authentication/social-connections/discord"],
           ["Dropbox", "/authentication/social-connections/dropbox"],
-          ["Github", "/authentication/social-connections/github"],
+          ["GitHub", "/authentication/social-connections/github"],
           ["GitLab", "/authentication/social-connections/gitlab"],
           ["HubSpot", "/authentication/social-connections/hubspot"],
           ["Line", "/authentication/social-connections/line"],
@@ -397,7 +397,7 @@
   ],
   [
     {
-      "title": "Javascript",
+      "title": "JavaScript",
       "icon": "javascript",
       "root": "references/javascript"
     },
