--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -605,16 +605,6 @@
       ["Rack/Rails integration", "references/ruby/rack-rails"]
     ]
   ],
-  [
-    {
-      "title": "Community",
-      "icon": "ruby",
-      "root": "references/community"
-    },
-    [
-      ["Community SDK's", "references/community"]
-    ]
-  ],
   "# API References",
   [
     { "title": "Backend SDK", "icon": "", "root": "/references/backend" },
@@ -759,5 +749,9 @@
       ]
     ]
   ],
-  ["Backend API", "https://clerk.com/docs/reference/backend-api"]
+  ["Backend API", "https://clerk.com/docs/reference/backend-api"],
+  "# Community",
+  ["Community SDK's", "references/community"],
+  ["Discord", "https://discord.com/invite/b5rXHjAg7A"],
+  ["Twitter", "https://twitter.com/ClerkDev"]
 ]
