--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -751,7 +751,7 @@
   ],
   ["Backend API", "https://clerk.com/docs/reference/backend-api"],
   "# Community",
-  ["Community SDK's", "references/community"],
+  ["Community SDKs", "references/community"],
   ["Discord", "https://discord.com/invite/b5rXHjAg7A"],
   ["Twitter", "https://twitter.com/ClerkDev"]
 ]
