add web3 to quickstarts nav

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -16,6 +16,7 @@
       ["Gatsby", "/quickstarts/gatsby"],
       ["RedwoodJS", "/quickstarts/redwood"],
       ["Expo", "/quickstarts/expo"],
+      ["Web3", "quickstarts/web3"],
       "# Frontend",
       ["JavaScript", "/quickstarts/javascript"],
       ["React", "/quickstarts/react"],
@@ -104,8 +105,7 @@
       ["<UserButton />", "/users/user-button"],
       ["<UserProfile />", "/users/user-profile"],
       "# Guides",
-      ["Sync data to your backend", "/users/sync-data"],
-      ["Web3 authentication", "/users/web3-wallets"]
+      ["Sync data to your backend", "/users/sync-data"]
     ]
   ],
   [
