add web3 back to users context

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -16,7 +16,6 @@
       ["Gatsby", "/quickstarts/gatsby"],
       ["RedwoodJS", "/quickstarts/redwood"],
       ["Expo", "/quickstarts/expo"],
-      ["Web3", "quickstarts/web3"],
       "# Frontend",
       ["JavaScript", "/quickstarts/javascript"],
       ["React", "/quickstarts/react"],
@@ -104,7 +103,8 @@
       ["<UserButton />", "/components/user/user-button"],
       ["<UserProfile />", "/components/user/user-profile"],
       "# Guides",
-      ["Sync data to your backend", "/users/sync-data"]
+      ["Sync data to your backend", "/users/sync-data"],
+      ["Web3", "/users/web3"]
     ]
   ],
   [
