--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -104,7 +104,7 @@
       ["<UserProfile />", "/components/user/user-profile"],
       "# Guides",
       ["Sync data to your backend", "/users/sync-data"],
-      ["Web3", "/users/web3"]
+      ["Web3 authentication", "/users/web3"]
     ]
   ],
   [
