Shehz/account portal (#218)
Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -153,6 +153,23 @@
   "---",
   [
     {
+      "title": "Account Portal",
+      "icon": "cloud",
+      "root": "account-portal"
+    },
+    [
+      ["Overview", "/account-portal/overview"],
+      ["Getting started", "/account-portal/getting-started"],
+
+      "# Advanced Usage",
+      ["Custom redirects", "/account-portal/custom-redirects"],
+      ["Direct links", "/account-portal/direct-links"],
+      ["User & Organization Pages","/account-portal/user-profile-org-profile"],
+      ["Disable Account Portal","/account-portal/disable-account-portal"]
+    ]
+  ],
+  [
+    {
       "title": "Component Reference",
       "icon": "rectangle-group",
       "root": "components"
@@ -203,6 +220,14 @@
       [
         "<RedirectToUserProfile/>",
         "/components/control/redirect-to-userprofile"
+      ],
+      [
+        "<RedirectToOrganizationProfile/>",
+        "/components/control/redirect-to-organizationprofile"
+      ],
+      [
+        "<RedirectToCreateOrganization/>",
+        "/components/control/redirect-to-createorganization"
       ],
       ["<SignedIn/>", "/components/control/signed-in"],
       ["<SignedOut/>", "/components/control/signed-out"],
