add new organization pages to sidenav

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -116,6 +116,7 @@
       ["<CreateOrganization/>", "/components/organization/create-organization"],
       ["<OrganizationProfile/>", "/components/organization/organization-profile"],
       ["<OrganizationSwitcher/>", "/components/organization/organization-switcher"],
+      ["<OrganizationList/>", "/components/organization/organization-list"],
       "# Building custom flows",
       ["Using metadata", "/organizations/metadata"],
       ["Creating orgs", "/organizations/creating-organizations"],
@@ -123,7 +124,8 @@
       ["Inviting users", "/organizations/inviting-users"],
       ["Managing roles", "/organizations/managing-roles"],
       ["Viewing memberships", "/organizations/viewing-memberships"],
-      ["Managing multiple orgs", "/organizations/multiple-orgs"]
+      ["Managing multiple orgs", "/organizations/multiple-orgs"],
+      ["Verified domains", "/organizations/verified-domains"]
     ]
   ],
   [
@@ -197,6 +199,10 @@
       [
         "<OrganizationSwitcher/>",
         "/components/organization/organization-switcher"
+      ],
+      [
+        "<OrganizationList/>",
+        "/components/organization/organization-list"
       ],
 
       "# Customization",
