add page for update organization methods

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -118,6 +118,7 @@
       "# Building custom flows",
       ["Using metadata", "/organizations/metadata"],
       ["Creating orgs", "/organizations/creating-organizations"],
+      ["Updating orgs", "/organizations/updating-organizations"],
       ["Inviting users", "/organizations/inviting-users"],
       ["Managing roles", "/organizations/managing-roles"],
       ["Managing multiple orgs", "/organizations/multiple-orgs"]
