DOCS-289 Add Web3 Guide to Quickstarts (#269)
Co-authored-by: Bryce Kalow <bryce@clerk.dev>

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -104,7 +104,7 @@
       ["<UserProfile />", "/components/user/user-profile"],
       "# Guides",
       ["Sync data to your backend", "/users/sync-data"],
-      ["Web3 authentication", "/users/web3-wallets"]
+      ["Web3 authentication", "/users/web3"]
     ]
   ],
   [
