add viewing memberships page; add copy about membership management

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -120,6 +120,7 @@
       ["Creating orgs", "/organizations/creating-organizations"],
       ["Inviting users", "/organizations/inviting-users"],
       ["Managing roles", "/organizations/managing-roles"],
+      ["Viewing memberships", "/organizations/viewing-memberships"],
       ["Managing multiple orgs", "/organizations/multiple-orgs"]
     ]
   ],
