Migrate 'Managing roles' from Sanity to MDX (#283)

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -121,6 +121,7 @@
       ["Updating orgs", "/organizations/updating-organizations"],
       ["Inviting users", "/organizations/inviting-users"],
       ["Managing roles", "/organizations/managing-roles"],
+      ["Viewing memberships", "/organizations/viewing-memberships"],
       ["Managing multiple orgs", "/organizations/multiple-orgs"]
     ]
   ],
