Added community SDKS under SDK Reference

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -605,6 +605,36 @@
       ["Rack/Rails integration", "references/ruby/rack-rails"]
     ]
   ],
+  [
+    {
+      "title": "Vue",
+      "icon": "vue",
+      "root": "references/vue",
+      "tag": "Community"
+    },    [
+      ["Overview", "references/vue/overview"]
+    ]
+  ],
+  [
+    {
+      "title": "Elysia",
+      "icon": "elysia",
+      "root": "references/elysia",
+      "tag": "Community"
+    },    [
+      ["Overview", "references/elysia/overview"]
+    ]
+  ],
+  [
+    {
+      "title": "Rust",
+      "icon": "rust",
+      "root": "references/rust",
+      "tag": "Community"
+    },    [
+      ["Overview", "references/rust/overview"]
+    ]
+  ],
   "# API References",
   [
     { "title": "Backend SDK", "icon": "", "root": "/references/backend" },
