--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -612,7 +612,7 @@
       "root": "references/vue",
       "tag": "Community"
     },    [
-      ["Overview", "references/vue/overview"]
+      ["Vue", "https://vue-clerk.vercel.app/"]
     ]
   ],
   [
@@ -622,7 +622,7 @@
       "root": "references/elysia",
       "tag": "Community"
     },    [
-      ["Overview", "references/elysia/overview"]
+      ["Elysia", "https://github.com/wobsoriano/elysia-clerk"]
     ]
   ],
   [
@@ -632,7 +632,7 @@
       "root": "references/rust",
       "tag": "Community"
     },    [
-      ["Overview", "references/rust/overview"]
+      ["Rust", "https://github.com/cincinnati-ventures/clerk-rs"]
     ]
   ],
   "# API References",
