--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -779,8 +779,5 @@
       ]
     ]
   ],
-  ["Backend API", "https://clerk.com/docs/reference/backend-api"],
-  "# Community",
-  ["Discord", "https://discord.com/invite/b5rXHjAg7A"],
-  ["Twitter", "https://twitter.com/ClerkDev"]
+  ["Backend API", "https://clerk.com/docs/reference/backend-api"]
 ]
