use correct capitalization for magic links

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -254,7 +254,7 @@
       ["useSignUp() and useSignIn()", "/custom-flows/use-sign-up"],
       ["Email & Password", "/custom-flows/email-password"],
       ["Email / SMS OTP", "/custom-flows/email-sms-otp"],
-      ["Magic Links", "/custom-flows/magic-links"],
+      ["Magic links", "/custom-flows/magic-links"],
       ["Multifactor", "/custom-flows/mfa"],
       ["OAuth Connections", "/custom-flows/oauth-connections"],
       ["SAML Connections", "/custom-flows/saml-connections"],
