update nav heading to use consistent capitalization

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -259,7 +259,7 @@
       ["OAuth Connections", "/custom-flows/oauth-connections"],
       ["SAML Connections", "/custom-flows/saml-connections"],
       ["Forgot Password", "/custom-flows/forgot-password"],
-      ["Sign Out", "/custom-flows/sign-out"],
+      ["Sign out", "/custom-flows/sign-out"],
       ["User Impersonation", "/custom-flows/user-impersonation"],
       ["Invitations", "/custom-flows/invitations"],
       ["Embedded Magic Links", "/custom-flows/embedded-magic-links"],
