migrate page from sanity to mdx

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -267,7 +267,7 @@
         "Multi-session applications",
         "/custom-flows/multi-session-applications"
       ],
-      ["Error Handling", "/custom-flows/error-handling"]
+      ["Error handling", "/custom-flows/error-handling"]
     ]
   ],
   "---",
