--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -60,6 +60,7 @@
         "Social connections (OAuth)",
         "/authentication/social-connections/oauth"
       ],
+      ["SAML at Clerk", "/authentication/saml-at-clerk"],
       ["Google", "/authentication/social-connections/google"],
       ["Facebook", "/authentication/social-connections/facebook"],
       ["Microsoft", "/authentication/social-connections/microsoft"],
