--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -630,6 +630,39 @@
       ["Rack/Rails integration", "references/ruby/rack-rails"]
     ]
   ],
+  [
+    {
+      "title": "Vue",
+      "icon": "vue",
+      "root": "references/vue",
+      "tag": "Community"
+    },    
+    [
+      ["Vue", "https://vue-clerk.vercel.app/"]
+    ]
+  ],
+  [
+    {
+      "title": "Elysia",
+      "icon": "elysia",
+      "root": "references/elysia",
+      "tag": "Community"
+    },    
+    [
+      ["Elysia", "https://github.com/wobsoriano/elysia-clerk"]
+    ]
+  ],
+  [
+    {
+      "title": "Rust",
+      "icon": "rust",
+      "root": "references/rust",
+      "tag": "Community"
+    },    
+    [
+      ["Rust", "https://github.com/cincinnati-ventures/clerk-rs"]
+    ]
+  ],
   "# API References",
   [
     { "title": "Backend SDK", "icon": "", "root": "/references/backend" },
