--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -51,6 +51,7 @@
       ["Session options", "/authentication/configuration/session-options"],
       ["Email & SMS options", "/authentication/configuration/email-options"],
       ["Restrictions", "/authentication/configuration/restrictions"],
+      ["SAML at Clerk", "/authentication/saml-at-clerk"],
       "# Prebuilt Components",
       ["<SignIn/>", "/components/authentication/sign-in"],
       ["<SignUp/>", "/components/authentication/sign-up"],
