Move params types to /types context

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -565,7 +565,8 @@
           ["MagicLinkError", "/references/javascript/types/magic-link-error"],
           ["DeletedObject", "/references/javascript/types/deleted-object"],
           ["OAuthProvider", "/references/javascript/types/oauth-provider"],
-          ["OAuthStrategy", "/references/javascript/types/oauth-strategy"]
+          ["OAuthStrategy", "/references/javascript/types/oauth-strategy"],
+          ["useOrganizationParams", "/references/javascript/types/use-organization-params"]
         ]
       ]
     ]
