Migrate deployments pages from Sanity to MDX (#339)

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -302,8 +302,7 @@
       ["Changing domains", "/deployments/changing-domains"],
       "# Migrations",
       ["Overview", "/deployments/migrate-overview"],
-      ["Import users", "/deployments/import-users"],
-      ["Export users", "/deployments/export-users"],
+      ["Import and export users", "/deployments/import-and-export-users"],
       ["Migrate from Firebase", "/deployments/migrate-from-firebase"]
     ]
   ],
